src/objects/ORDO_Bus_Stops__c.object
<CustomObject>
    <fields>
        <fullName>Before_Station__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Before Station</label>
        <referenceTo>ORDO_Bus_Stops__c</referenceTo>
        <relationshipLabel>Bus Before Stop</relationshipLabel>
        <relationshipName>Bus_Stops_before</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bus_Lines__c</fullName>
        <label>Bus Lines</label>
        <referenceTo>ORDO_Bus_Line__c</referenceTo>
        <relationshipLabel>Bus Stops</relationshipLabel>
        <relationshipName>Bus_Stops</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bus_Stations__c</fullName>
        <label>Bus Stations</label>
        <referenceTo>ORDO_Bus_Station__c</referenceTo>
        <relationshipLabel>Bus Stops</relationshipLabel>
        <relationshipName>Bus_Stops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Houres__c</fullName>
        <label>Hour</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <label>Minute</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nest_Station__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nest Station</label>
        <referenceTo>ORDO_Bus_Stops__c</referenceTo>
        <relationshipLabel>Bus Next Stop</relationshipLabel>
        <relationshipName>Bus_Stops_next</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bus Stops</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bus Stops Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Stops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>